<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@color/white"
            android:elevation="7dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.corporateapp.fonts.LightEditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/search_news"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <com.corporateapp.fonts.RegularTextView
            android:id="@+id/tv_screenTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center|left"
            android:text="@string/txt_allNws"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/grey">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_allComplaints"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:layoutAnimation="@anim/layout_animation_from_bottom">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_noNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_norecords"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>