<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <com.corporateapp.fonts.RegularTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center|left"
            android:text="@string/screen_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--<ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_phone_number"
            android:padding="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_phone_number"
            android:padding="10dp"/>-->
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <com.corporateapp.fonts.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_info"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColorHint="@color/black">

                    <com.corporateapp.fonts.RegularEditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_title"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="15dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_date"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:textColorHint="@color/black">

                        <com.corporateapp.fonts.RegularEditText
                            android:id="@+id/edtDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:enabled="false"
                            android:hint="@string/txt_date"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>

                    <!--<ImageView
                        android:id="@+id/imgCalender"
                        android:layout_width="0dip"
                        android:layout_height="29dip"
                        android:layout_weight=".2"
                        android:src="@mipmap/calendar"
                        android:padding="5dp"/>-->
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

                <Spinner
                    android:id="@+id/spDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"></Spinner>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <!-- <Spinner
                     android:id="@+id/spWard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"></Spinner>-->
                <com.corporateapp.fonts.RegularTextView
                    android:id="@+id/txtWard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pcmc_ward11"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/black">

                        <com.corporateapp.fonts.RegularEditText
                            android:id="@+id/edtLocation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/txt_location"
                            android:paddingRight="30dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/imgLocation"
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="7dp"
                        android:padding="5dp"
                        android:src="@mipmap/gps" />
                </RelativeLayout>


                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black">

                    <com.corporateapp.fonts.RegularEditText
                        android:id="@+id/edtLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_location"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>-->

                <!--<Spinner
                    android:id="@+id/spLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black">

                    <com.corporateapp.fonts.RegularEditText
                        android:id="@+id/edtPincode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_pincode"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>
                <!--  <Spinner
                      android:id="@+id/spPincode"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"></Spinner>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black">

                    <com.corporateapp.fonts.RegularEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/txt_description"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dip"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/placeholder_gallary" />

                <com.corporateapp.fonts.LightTextView
                    android:id="@+id/txtChangeImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:text="@string/add_photo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".45"
                    android:background="@drawable/btn_green_bkg"
                    android:text="@string/btn_submit"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight=".1" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".45"
                    android:background="@drawable/btn_orange_bkg"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>